--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
     "files.associations": {
         "unistd.h": "c",
         "cstdlib": "c",
-        "stddef.h": "c"
+        "stddef.h": "c",
+        "features.h": "c"
     },
 }
