--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,12 @@ include_directories( ${GETOPT_PATH}/include )
 
 # Add executable files : NOTE it is a bad way of doing it since you would
 # Need to rerun cmake . -B build to be sure they are in the correct folder
-AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/src/ SOURCE_FILES)
-add_executable( freud ${SOURCE_FILES})
+add_executable(freud
+    src/main.c
+    src/features.c
+    src/utils.c
+    src/argsparse.c
+)
 
 target_compile_options(freud PRIVATE -Wall -Wextra)
 #target_compile_options(freud PRIVATE -Wall -Wextra -Wpedantic -Werror)
