--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "unistd.h": "c",
         "cstdlib": "c",
         "stddef.h": "c",
-        "features.h": "c"
+        "features.h": "c",
+        "utils.h": "c"
     },
 }
